--- a/8.ipynb
+++ b/8.ipynb
@@ -40,19 +40,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b6912c1e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Printing array a..\n",
+      "[[ 1  2  3  4]\n",
+      " [ 2  4  5  6]\n",
+      " [10 20 39  3]]\n",
+      "\n",
+      "Printing array b..\n",
+      "[2 4 6 8]\n",
+      "\n",
+      "Printing a+b..\n",
+      "[[ 3  6  9 12]\n",
+      " [ 4  8 11 14]\n",
+      " [12 24 45 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[1,2,3,4],[2,4,5,6],[10,20,39,3]])\n",
+    "b =np.array([2,4,6,8])\n",
+    "print(\"\\nPrinting array a..\")\n",
+    "print(a)\n",
+    "print(\"\\nPrinting array b..\")\n",
+    "print(b)\n",
+    "print(\"\\nPrinting a+b..\")\n",
+    "print(a+b)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1d5733f",
+   "metadata": {},
+   "source": [
+    "Iteration"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a5a41d6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing array:\n",
+      "  [[ 1  2  3  4]\n",
+      " [ 2  4  5  6]\n",
+      " [10 20 39  3]]\n",
+      "\n",
+      "Iterating over rows..\n",
+      "1, 2, 3, 4, 2, 4, 5, 6, 10, 20, 39, 3, "
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[1,2,3,4],[2,4,5,6],[10,20,39,3]])\n",
+    "print(\"Printing array:\\n \",a)\n",
+    "print(\"\\nIterating over rows..\")\n",
+    "for x in np.nditer(a):\n",
+    "    print(x,end=\", \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4081a8c9",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0b67f86",
+   "metadata": {},
+   "source": [
+    "3-D Array"
+   ]
   },
   {
    "cell_type": "code",
